[workspace]
resolver = "2"
members = [
    ".",
    "tools/key_viewer",
]

[package]
name = "keymouse-monitor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
futures = "0.3"
