[workspace]
resolver = "2"
members = [
    ".",
    "common",
    "rawinput",
    "tools/key_viewer",
    "tools/mouse_bench",
    "tools/db_check",
    "tools/changelog_fmt",
]

[package]
name = "keymouse-monitor"
version = "2.3.0"
edition = "2021"
build = "scripts/build.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
keymouse-rawinput = { path = "rawinput" }
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input", "Win32_System_LibraryLoader"] }

[build-dependencies]
embed-resource = "2"
resvg = "0.42"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[dependencies]
keymouse-common = { path = "common" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
rusqlite = { version = "0.40", features = ["bundled"] }
mongodb = "3"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.7", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
futures = "0.3"
