[package]
name = "db-check"
version = "0.1.0"
edition = "2021"

[dependencies]
keymouse-monitor = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled"] }
mongodb = { version = "3", features = ["sync"] }
