[package]
name = "key-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
] }
